# avg-BF-interpreter

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  Makefile  README.md  main.cc  small.cc
